[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-maestro-maintainer-agent"
version = "1.0.0"
description = "MAINTAINER role-plugin for AI Maestro"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 320
